src/Admin/components/SummaryTable/styles.module.scss
$breakpoint-desktop: 900px;

.summaryPanel, .summaryTable {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #f3f4f6;
  background-color: var(--givewp-shades-white);

  @media (max-width: $breakpoint-desktop) {
    flex-wrap: wrap;
  }
}

.summaryTableLabel {
  flex-grow: 1;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  color: #4b5563;
  padding: var(--givewp-spacing-3) 0;
  margin: 0;
}

.summaryTableValue {
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
  color: #1f2937;
  padding: var(--givewp-spacing-3) 0;

  &.pill {
    background-color: #f9fafb;
    border-radius: 9999px;
    color: #060c1a;
    border: 1px solid #374151;
    display: inline-flex;
    justify-content: center;
    font-size: 0.75rem;
    line-height: 1.5;
    margin: var(--givewp-spacing-3) 0;
    padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
  }
}

.summaryTableValues {
  display: flex;
  flex-direction: column;
  gap: var(--givewp-spacing-1);
  margin: 0;
  padding: var(--givewp-spacing-5) 0 var(--givewp-spacing-3) 0;

  p {
    margin: 0;

    &:first-child {
      font-size: 1rem;
      font-weight: 600;
      line-height: 1.5;
      color: #459948;
      text-align: right;
    }

    &:last-child {
      font-size: 0.875rem;
      font-weight: 500;
      line-height: 1.43;
      color: #4b5563;
    }
  }
}

